peac_dev/force-app/main/default/objects/Insurance_Status_Code__mdt/Insurance_Status_Code__mdt.object-meta.xml
<CustomObject>
    <label>Insurance Status Code</label>
    <pluralLabel>Insurance Status Codes</pluralLabel>
</CustomObject>