peac_dev/force-app/main/default/objects/Insurance_Status_Code__mdt/fields/Infolease_9_Code__c.field-meta.xml
<CustomField>
    <fullName>Infolease_9_Code__c</fullName>
    <label>Infolease 9 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>