peac_dev/force-app/main/default/objects/Insurance_Status_Code__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>