peac_dev/force-app/main/default/objects/Insurance_Status_Code__mdt/listViews/more_fields.listView-meta.xml
<ListView>
    <fullName>more_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Infolease_9_Code__c</columns>
    <columns>Picklist_Value__c</columns>
    <columns>Infolease_10_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>more fields</label>
</ListView>